Fix harvesting tabs alignment  (#1500)
* sort fees selector options #1430

* fix tab alignments in harvesting page #1441

* fixes #1491

* update fees selector

--- a/src/components/NavigationLinks/NavigationLinks.less
+++ b/src/components/NavigationLinks/NavigationLinks.less
@@ -33,8 +33,10 @@
     grid-auto-flow: column;
     justify-items: start;
     justify-content: start;
-    background-color: transparent;
-
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
     .empty {
         display: flex;
         height: 100%;
